fix: update gap

--- a/src/css/our-lessons.css
+++ b/src/css/our-lessons.css
@@ -77,6 +77,7 @@
 
 @media only screen and (min-width: 768px) {
         grid-template-columns: repeat(2, 1fr);
+        gap: 32px;
 
         .lesson-card:nth-child(3) {
             grid-column: 1;
